<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:text="@string/button_beginner"
            android:textAllCaps="true"
            android:textSize="20dp"
            android:layout_margin="8dp"
            android:onClick="sightPracticeBeg"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:text="@string/button_intermediate"
            android:textAllCaps="true"
            android:textSize="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:onClick="sightPracticeInt"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:text="@string/button_advanced"
            android:textAllCaps="true"
            android:textSize="20dp"
            android:layout_margin="8dp"
            android:onClick="sightPracticeAdv"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:background="#e8eaf6"
>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:text="@string/button_menu"
                android:textAllCaps="true"
                android:layout_margin="4dp"
                android:onClick="sightMainMenu"/>

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>