<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:orientation="vertical"
    android:layout_height="match_parent" android:background="@color/colorPrimaryDark"
    android:baselineAligned="false">
    <Button
        android:id="@+id/english_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="8dp"
        android:text="@string/key_menu"
        android:onClick="sightKeyMenu" />

    <Button
        android:id="@+id/spanish_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="8dp"
        android:text="@string/time_menu"
        android:onClick="sightTimeMenu"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAllCaps="true"
        android:layout_margin="4dp"
        android:background="#e8eaf6">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true"
            android:layout_margin="4dp"
            android:text="@string/button_start"
            android:onClick="setLevelLib"/>
    </RelativeLayout>
    
    </LinearLayout>

