<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Switch
            android:id="@+id/metronome_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:text="@string/metronome"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="8dp"
            android:paddingRight="32dp"/>
        <Button
            android:id="@+id/button_metro_down"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/bpm_text"
            android:text="-"
            android:onClick="metroDecrement"/>
        <TextView
            android:id="@+id/bpm_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/metronome_switch"
            android:gravity="center"
            android:text="60"/>

        <Button
            android:id="@+id/button_metro_up"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/bpm_text"
            android:text="+"
            android:onClick="metroIncrement"/>

        <TextView
            android:id="@+id/sight_practice_head"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:text="@string/button_beginner"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/sight_practice_timer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_margin="8dp"
            android:text=":00"
            android:gravity="center"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12">

        <ImageView
            android:id="@+id/sight_practice_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/music_note"
            android:scaleType="centerInside"
            android:layout_margin="8dp" />

        <Button
            android:id="@+id/music_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/paused"
            android:textSize="100sp"
            android:textColor="@android:color/transparent"
            android:background="@android:color/transparent"
            android:textAllCaps="true"
            android:layout_margin="4dp"
            android:onClick="nextPractice"/>
        <TextView
            android:id="@+id/music_file_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="testingtesting"
            android:textAlignment="center"
            android:layout_margin="8dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/practice_menu"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:text="@string/button_menu"
            android:textAllCaps="true"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="8dp"
            android:onClick="sightMainMenu"/>

        <Button
            android:id="@+id/pause_sight_practice"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/pause"
            android:layout_margin="4dp"
            android:onClick="onOffPause" />
        <TextView
            android:id="@+id/rotation_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/rotation"
            android:textAllCaps="true"
            android:layout_toRightOf="@+id/pause_sight_practice"
            android:textColor="@drawable/white_color"
            android:gravity="center"
            android:padding="8dp" />

        <RelativeLayout
            android:id="@+id/rotate_buttons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/rotation_text">

            <Button
                android:id="@+id/rotate_slow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:text="@string/slow"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="8dp"
                android:onClick="setCountSlow"/>

            <Button
                android:id="@+id/rotate_fast"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:text="@string/fast"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="8dp"
                android:onClick="setCountFast"/>


            <Button
                android:id="@+id/rotate_start"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:text="@string/rotate"
                android:textAllCaps="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="8dp"
                android:onClick="startRotation"/>

            <TextView
                android:id="@+id/rotation_countdown"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/rotate_stop"
                android:gravity="center"
                android:layout_marginRight="4dp"
                android:text="5"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/rotate_stop"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:text="o"
                android:textAllCaps="true"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="8dp"
                android:onClick="stopRotation"/>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>